<resources>
    <string name="app_name">创艺画屏TV</string>
    <string name="button_local_play">本地播放</string>
    <string name="button_cloud_play">云端播放</string>
    <string name="nav_back">返回</string>
    <string name="nav_title_play_setting">播放设置</string>
    <string name="nav_title_local_play">本地播放</string>
    <string name="nav_title_cloud_play">云端播放</string>
    <string name="item_play_select">播放选择</string>
    <string name="item_bk_music">背景音乐</string>
    <string name="item_play_time">播放时间</string>
    <string name="item_play_setting">播放设置</string>
    <string name="item_play_animation">播放特效</string>
    <string name="item_screen_rate">显示比例</string>
    <string name="item_photo_mode">图片模式</string>
    <string name="item_video_mode">视频模式</string>
    <string name="item_music_mode">音乐模式</string>
    <string name="file_update">文件更新</string>
    <string name="item_file_mgr">文件管理</string>
    <string name="item_default_setting">恢复默认设置</string>
    <string name="item_import_image">图片导入</string>
    <string name="item_import_video">视频导入</string>
    <string name="item_import_music">背景音乐导入</string>
    <string name="nav_back_play">返回播</string>
    <string name="server_ip">服务器IP：</string>
    <string name="txt_scan_add_device">扫一扫添加设备</string>
    <string name="txt_device_code">机器码:</string>
    <string name="txt_network_setting">网络设置</string>
    <string name="txt_version">版本号</string>
    <string name="txt_clear_show">清空节目</string>
    <string name="txt_account">账号管理</string>
    <string name="nav_file_manager">文件管理</string>
    <string name="file_nav_image">图片</string>
    <string name="file_nav_video">视频</string>
    <string name="file_nav_music">音乐</string>
    <string name="file_tool_to_top">置顶</string>
    <string name="file_tool_sort_up">升序</string>
    <string name="file_tool_sort_down">降序</string>
    <string name="file_tool_to_bottom">置底</string>
    <string name="file_tool_delete">删除</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_download">下载APP</string>
    <string name="txt_account_status">未注册</string>
    <string name="network_not_set">未连接</string>
    <string name="network_enable">已连接</string>
    <string name="txt_already_clear">已清空</string>
    <string name="txt_clear_cache">缓存清空</string>
    <string name="hint">提示</string>
    <string name="empty_cloud_media">当前设备还未绑定用户，暂时无法使用云端播放，是否放回首页？</string>
    <string name="back_home">返回首页</string>

    <string name="title_wait_upgrade">更新中,请稍后...</string>
    <string name="msg_hint_upgrade_version">是否更新至版本：</string>
    <string name="btn_upgrade">更新</string>
    <string name="btn_cancel" >取消</string>
    <string name="btn_close">关闭</string>
    <string name="msg_not_media_to_play">暂无播放内容</string>
    <string name="btn_start_import">开始导入</string>
    <string name="title_import_wait">导入中，请稍后 ...</string>
    <string name="image">图片</string>
    <string name="video">视频</string>
    <string name="music">音乐</string>
    <string name="hint_not_media_import">暂无%s导入</string>
    <string name="hint_import_sure">"本次导入 %d 个 %s，是否继续？</string>
    <string name="hint_set_default_sure">确定恢复默认设置？</string>
    <string name="btn_do_set_default">恢复默认</string>
    <string name="hint_set_default_ok">已恢复默认设置</string>
    <string name="txt_registed">已注册</string>
    <string name="video_and_image">视频+图片</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="s3">3</string>
    <string name="s6">6</string>
    <string name="s10">10</string>
    <string name="s20">20</string>
    <string name="s30">30</string>
    <string name="s60">60</string>
    <string name="has_not">无</string>
    <string name="has">有</string>
    <string name="full_screen">全屏播放</string>
    <string name="all_loop">全部循环</string>
    <string name="single_loop">单个循环</string>
    <string name="single_muisc_loop">单曲循环</string>
    <string name="play_select">播放选择</string>
    <string name="bk_music">背景音乐</string>
    <string name="play_time">播放时间</string>
    <string name="paly_anim">播放特效</string>
    <string name="screen_rate">显示比例</string>
    <string name="image_mode">图片模式</string>
    <string name="video_mode">视频模式</string>
    <string name="music_mode">"音乐模式"</string>
    <string name="origin_size">原始尺寸</string>
    <string name="hint_delete_content" >请选择要删除的内容</string>
    <string name="btn_sure">确定</string>
    <string name="label_code">绑定码：</string>
    <string name="empty_local_media">暂无播放内容</string>

</resources>