<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bk_general_port"
    tools:context=".activity.FileActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:background="@drawable/top_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp60">
            <LinearLayout
                android:paddingLeft="@dimen/dp20"
                android:paddingRight="@dimen/dp20"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@mipmap/ic_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="@dimen/sp14"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="@dimen/dp8"
                    android:text="@string/nav_back_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@mipmap/ic_file_mgr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="@dimen/sp24"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="@dimen/dp8"
                    android:text="@string/nav_file_manager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:orientation="horizontal"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:paddingLeft="@dimen/dp20"
                android:id="@+id/rg_tab_bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_marginTop="1dp"
                android:background="@android:color/transparent"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rbImage"
                    android:checked="true"
                    android:button="@null"
                    android:background="@drawable/button_tool"
                    android:gravity="center"
                    android:text="@string/file_nav_image"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp16"
                    android:layout_width="@dimen/dp110"
                    android:layout_height="@dimen/dp33"/>

                <RadioButton
                    android:id="@+id/rbVideo"
                    android:button="@null"
                    android:background="@drawable/button_tool"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp16"
                    android:text="@string/file_nav_video"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp16"
                    android:layout_width="@dimen/dp110"
                    android:layout_height="@dimen/dp33"/>

                <RadioButton
                    android:id="@+id/rbMusic"
                    android:button="@null"
                    android:background="@drawable/button_tool"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp16"
                    android:text="@string/file_nav_music"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp16"
                    android:layout_width="@dimen/dp110"
                    android:layout_height="@dimen/dp33"/>
            </RadioGroup>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:paddingLeft="@dimen/dp20"
                android:paddingRight="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_above="@+id/llTools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.viewpager.widget.ViewPager>

            <LinearLayout
                android:id="@+id/llTools"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp60">

                <LinearLayout
                    android:background="@drawable/button_tool"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp15"
                    android:layout_width="@dimen/dp80"
                    android:layout_height="@dimen/dp33">
                    <TextView
                        android:text="@string/file_tool_to_top"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp14"
                        android:drawablePadding="@dimen/dp4"
                        android:drawableLeft="@mipmap/ic_to_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/button_tool"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp15"
                    android:layout_width="@dimen/dp80"
                    android:layout_height="@dimen/dp33">
                    <TextView
                        android:text="@string/file_tool_sort_up"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp14"
                        android:drawablePadding="@dimen/dp4"
                        android:drawableLeft="@mipmap/ic_sort_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/button_tool"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp15"
                    android:layout_width="@dimen/dp80"
                    android:layout_height="@dimen/dp33">
                    <TextView
                        android:text="@string/file_tool_sort_down"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp14"
                        android:drawablePadding="@dimen/dp4"
                        android:drawableLeft="@mipmap/ic_sort_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/button_tool"
                    android:gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_width="@dimen/dp80"
                    android:layout_height="@dimen/dp33">
                    <TextView
                        android:text="@string/file_tool_to_bottom"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp14"
                        android:drawablePadding="@dimen/dp4"
                        android:drawableLeft="@mipmap/ic_to_bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/button_tool"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp15"
                    android:layout_width="@dimen/dp80"
                    android:layout_height="@dimen/dp33">
                    <TextView
                        android:text="@string/file_tool_delete"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp14"
                        android:drawablePadding="@dimen/dp4"
                        android:drawableLeft="@mipmap/ic_file_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>